# vision-desktop-automation

./: .env  AI_detection.py  README.md  pyproject.toml
