
[project]
name = "tjm-project"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "anthropic",
    "pyautogui",
    "pillow",
    "mss",
    "requests",
    "python-dotenv",
    "pygetwindow",
    "pywin32",
    "opencv-python>=4.13.0.92",
    "botcity-framework-core>=1.3.0",
    "easyocr>=1.7.2",
    "numpy>=2.4.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
